<resources>
    <string name="app_name">Kupeng Finance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Forget Password -->
    <string name="Text_forget_password">Enter the email address you used to register, and we will send you an email to recover your password.</string>
    <string-array name="categoryTrans">spinTrans
        <item>Select One</item>
        <item>outcome</item>
        <item>income</item>
    </string-array>

    <string-array name="category">spin
        <item>Select One</item>
        <item>Card</item>
        <item>Cash</item>
    </string-array>

    <string-array name="account">spin
        <item>Card</item>
    </string-array>

    <string-array name="account1">spin
        <item>Cash</item>
    </string-array>

    <!-- RecyclerView This Month -->
    <string name="Type">Type</string>
    <string name="Category">Category</string>
    <string name="Account">Account</string>
    <string name="Amount">Amount</string>
    <string name="Note">Note</string>
    <string name="Cash">Cash</string>
    <string name="select_option">Select an option</string>
    <string name="first_spinner_label">First Spinner</string>

</resources>