<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/textType"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/Type"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textInput"
        android:layout_toRightOf="@+id/textInput"
        android:orientation="vertical"
        android:textAlignment="center"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/textCategory"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/Category"/>

        <TextView
            android:id="@+id/textAccount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:text="@string/Account"/>

        <TextView
            android:id="@+id/textNote"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAlignment="center"
            android:text="@string/Note"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:textAlignment="center"
        android:text="@string/Amount">
    </TextView>


</LinearLayout>